--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,10 +1,10 @@
 main:
+  - name: "Home"
+    url: "/"
+    weight: 1
   - name: "Services"
     url: "/services/"
     weight: 2
-  - name: "Team"
-    url: "/team/"
-    weight: 3
   - name: "About"
     url: "/about/"
     weight: 4
